# oop_lab_004

./: CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
tests/: test_figures.cpp
